syntax = "proto3";

option go_package = "auth/api";

service Authorization {
  rpc Authentication(User) returns (TokenPair);
  rpc Authorization(AccessToken) returns (Access);
  rpc RefreshTokens(TokenPair) returns (TokenPair);
  rpc Logout(TokenPair) returns (EmptyResponse);
}

message User {
  string Username = 1;
  string Password = 2;
}

message AccessToken {
  string token = 1;
}

message RefreshToken {
  string token = 1;
}

message TokenPair {
  string accessToken = 1;
  string refreshToken = 2;
}

message Access {
  bool status = 1;
}

message EmptyResponse {}